--- a/Juliana/src/index.css
+++ b/Juliana/src/index.css
@@ -1,8 +1,12 @@
 body {
   background-color: rgb(65, 73, 82);
   color: aliceblue;
-  display: flex;
+  /* display: flex;
   align-items: center;
-  justify-content: center;
+  justify-content: center; */
   min-height: 100vh;
+}
+
+.exercise-container{
+  height: 100vh;
 }
